--- a/about.html
+++ b/about.html
@@ -18,10 +18,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <a href="#home" class="w3-bar-item w3-button w3-wide">LOGO</a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
-      <a href="#about" class="w3-bar-item w3-button">ABOUT ME</a>
-      <a href="#team" class="w3-bar-item w3-button"><i class="fa fa-user"></i> RESEARCH</a>
-      <a href="#work" class="w3-bar-item w3-button"><i class="fa fa-th"></i> PUBLICATIONS</a>
-      <a href="#pricing" class="w3-bar-item w3-button"><i class="fa fa-usd"></i> BLOGS</a>
+      <a href="about.html"class="w3-bar-item w3-button">ABOUT ME</a>
+      <a href="research.html" class="w3-bar-item w3-button"> RESEARCH</a>
+      <a href="publications.html" class="w3-bar-item w3-button"> PUBLICATIONS</a>
+      <a href="blogs.html" class="w3-bar-item w3-button">BLOGS</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -34,10 +34,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <!-- Sidebar on small screens when clicking the menu icon -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
-  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT ME</a>
-  <a href="#team" onclick="w3_close()" class="w3-bar-item w3-button">RESEARCH</a>
-  <a href="#work" onclick="w3_close()" class="w3-bar-item w3-button">PUBLICATIONS</a>
-  <a href="#pricing" onclick="w3_close()" class="w3-bar-item w3-button">BLOGS</a>
+  <a href="about.html" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT ME</a>
+  <a href="research.html" onclick="w3_close()" class="w3-bar-item w3-button">RESEARCH</a>
+  <a href="publications.html" onclick="w3_close()" class="w3-bar-item w3-button">PUBLICATIONS</a>
+  <a href="blogs.html" onclick="w3_close()" class="w3-bar-item w3-button">BLOGS</a>
 </nav>
 
 
