--- a/about.html
+++ b/about.html
@@ -13,7 +13,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 </head>
 <body class="w3-light-grey">
 <!-- Navbar (sit on top) -->
-<div class="w3-top">
+<header>
+  <div class="w3-top">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
     <a href="#home" class="w3-bar-item w3-button w3-wide">LOGO</a>
     <!-- Right-sided navbar links -->
