--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <!-- Page Container -->
 <div class="w3-content w3-margin-top" style="max-width:1400px;">
   <!-- The Grid -->
-  <div class="w3-row-padding">
+  <div class="w3-row">
     <!-- Left Column -->
     <div class="w3-third w3-container">
     
@@ -68,7 +68,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       </div><br>
 
     <!-- End Left Column -->
-    </div>
+     </div>
 
     <!-- Right Column -->
     <div class="w3-twothird w3-container">
