--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <!-- Page Container -->
 
   <!-- The Grid -->
-  <div class="w3-row">
+  <div class="row">
     <!-- Left Column -->
     <div class="column side">
     
